--- a/src/languages/ar.json
+++ b/src/languages/ar.json
@@ -1,7 +1,7 @@
 {
     "___creditos": {
-        "___Contribuidor": "https://github.com/jeffersonalionco",
-        "___Criador": "https://github.com/BrunoSobrino"
+        "___Contribuidor": "https://www.instagram.com/ineffable.mvrco/",
+        "___Criador": "https://www.instagram.com/ineffable.mvrco/"
     },
     "plugins": {
         "antiarab": {
@@ -801,7 +801,7 @@
         },
         "downloader_ytmeta": {
             "texto1": "[❗] أدخل رابط YouTube.",
-            "texto2": "🤴🏻 تنزيل بواسطة BrunoSobrino & TheMystic-Bot-MD 🤖"
+            "texto2": "🤴🏻 تنزيل بواسطة ineffable.mvrco & 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧  🤖"
         },
         "downloader_ytv_2": {
             "texto1": "[❗𝐈𝐍𝐅𝐎❗] أدخل الأمر بالإضافة إلى رابط فيديو YouTube*",
@@ -858,8 +858,8 @@
         "fix_owner_esperando_mensajes": {
             "texto1": "[❗] استخدم هذا الأمر مباشرةً على الرقم الرئيسي للروبوت.",
             "texto2": "[❗] بدء عملية حذف جميع ملفات الجلسة، باستثناء ملف creds.json...",
-            "texto3": "[❗] مجلد MysticSession غير موجود أو فارغ.",
-            "texto4": "[❗] لم يتم العثور على أي ملفات لحذفها في مجلد MysticSession.",
+            "texto3": "[❗] مجلد KillzNSession غير موجود أو فارغ.",
+            "texto4": "[❗] لم يتم العثور على أي ملفات لحذفها في مجلد KillzNSession.",
             "texto5": [
                 "[❗] تم حذف",
                 "ملفات الجلسة، باستثناء ملف creds.json."
@@ -3153,12 +3153,12 @@
         },
         "info_creador": {
             "texto1": [
-                "—◉ رقم مالكي: wa.me/5219992095479*",
+                "—◉ رقم مالكي: wa.me/56983073328*",
                 "—◉ رقم المساهم 1: wa.me/34642467703*",
                 "—◉ رقم المساهم 2: wa.me/50499698072*",
                 "—◉ رقم المساهم 3: wa.me/595986460945*",
                 "—◉ رقم المساهم 4: wa.me/51940617554*",
-                "—◉ رقم المساهم 5: wa.me/51995386439*",
+                "—◉ رقم المساهم 5: wa.me/56983073328*",
                 "—◉ رقم المساهم 6: wa.me/593991398786*",
                 "—◉ رقم المساهم 7: wa.me/51996089079*",
                 "—◉ رقم المساهم 8: wa.me/573225236629*",
@@ -3187,7 +3187,7 @@
                 "➤ PAYPAL: https://www.paypal.me/ineffablexmvrco",
                 "👉🏻 اتصل في حال الحاجة",
                 "مزيد من البيانات وللشكر",
-                "wa.me/5219992095479"
+                "wa.me/56983073328"
             ]
         },
         "info_estado": {
@@ -3252,7 +3252,7 @@
             "texto2": "أفضل خدمة استضافة 🚀"
         },
         "info_instalarbot": {
-            "texto1": "—◉ تثبيت البوت الرئيسي\n> البرنامج التعليمي: https://youtu.be/eC9TfKICpcY\n> الصفحة الرسمية: https://boxmineworld.com\n> لوحة التحكم: https://dash.boxmineworld.com/home\n> الواجهة: https://panel.boxmineworld.com\n> الدعم: https://discord.gg/84qsr4v \n\n------------------------------------\n—◉ تثبيت البوت الفرعي\n> البرنامج التعليمي: https://youtu.be/yRS4m36Zwkw\n\n------------------------------------\n\n*—◉ أوامر التثبيت*\n> الأوامر:\n- cd && termux-setup-storage\n- apt-get update -y && apt-get upgrade -y\n- pkg install -y git nodejs ffmpeg imagemagick && pkg install yarn \n- git clone https://github.com/Santx07/KillzN.git && cd TheMystic-Bot-MD\n- yarn install\n- npm install\n- npm update\n- npm start\n\n------------------------------------\n\n—◉ ✔️ تنشيط البوت في حالة الإيقاف في Termux ✔️\nاكتب الأوامر التالية واحدة تلو الأخرى:\n> cd TheMystic-Bot-MD\n> npm start\n\n------------------------------------\n\n—◉ 👽 الحصول على رمز QR آخر في Termux 👽\nاكتب الأوامر التالية واحدة تلو الأخرى:\n> cd TheMystic-Bot-MD\n> rm -rf MysticSession\n> npm start",
+            "texto1": "—◉ تثبيت البوت الرئيسي\n> البرنامج التعليمي: https://youtu.be/eC9TfKICpcY\n> الصفحة الرسمية: https://boxmineworld.com\n> لوحة التحكم: https://dash.boxmineworld.com/home\n> الواجهة: https://panel.boxmineworld.com\n> الدعم: https://discord.gg/84qsr4v \n\n------------------------------------\n—◉ تثبيت البوت الفرعي\n> البرنامج التعليمي: https://youtu.be/yRS4m36Zwkw\n\n------------------------------------\n\n*—◉ أوامر التثبيت*\n> الأوامر:\n- cd && termux-setup-storage\n- apt-get update -y && apt-get upgrade -y\n- pkg install -y git nodejs ffmpeg imagemagick && pkg install yarn \n- git clone https://github.com/KillzN/Prueba.git && cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n- yarn install\n- npm install\n- npm update\n- npm start\n\n------------------------------------\n\n—◉ ✔️ تنشيط البوت في حالة الإيقاف في Termux ✔️\nاكتب الأوامر التالية واحدة تلو الأخرى:\n> cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n> npm start\n\n------------------------------------\n\n—◉ 👽 الحصول على رمز QR آخر في Termux 👽\nاكتب الأوامر التالية واحدة تلو الأخرى:\n> cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n> rm -rf KillzNSession\n> npm start",
             "texto2": "أفضل بوت واتساب"
         },
         "info_listprem": {
@@ -3287,12 +3287,12 @@
             "texto1": [
                 "_*< معلومات - المستودع />*_",
                 "▢ *الاسم:*",
-                "TheMystic-Bot-MD",
+                "𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 ",
                 "▢ *الزوار:*",
                 "▢ *الحجم:*",
                 "▢ *آخر تحديث:*",
                 "▢ *الرابط:*",
-                "https://github.com/Santx07/KillzN",
+                "https://github.com/KillzN/Prueba",
                 "Forks ·",
                 "Stars ·",
                 "Issues\n\n",
@@ -3722,7 +3722,7 @@
             "texto3": "قائمة مجموعات البوت 🤖\n\n—◉ إجمالي المجموعات:"
         },
         "owner_join": {
-            "texto1": "[❗] الرابط غير صحيح أو مفقود، يرجى إدخال رابط مجموعة واتساب.\n\n*—◉ مثال:\n◉ #join https://chat.whatsapp.com/FwEUGxkvZD85fIIp0gKyFC*",
+            "texto1": "[❗] الرابط غير صحيح أو مفقود، يرجى إدخال رابط مجموعة واتساب.\n\n*—◉ مثال:\n◉ #join https://chat.whatsapp.com/FFB0fgdK3IP4ZEmZ8jF1CC*",
             "texto2": "[ ✔️ ] تم إضافة البوت بنجاح إلى المجموعة.",
             "texto3": "[❗] تم إرسال رابط مجموعتك إلى مالك البوت.\n\n*—◉ ستتم مراجعة مجموعتك وسيقرر مالك البوت ما إذا كان سيضيف البوت أم لا.\n\n—◉ قد ترفض طلبك لأسباب مثل:\n1.- البوت مشغول.\n2.- تمت إزالة البوت مؤخرًا من المجموعة.\n3.- تمت إعادة تعيين رابط المجموعة.\n4.- قرار من مالك البوت بعدم إضافة البوت إلى المجموعات.\n\n—◉ قد يستغرق عملية المراجعة بعض الوقت، ربما عدة أيام، يرجى الانتظار بصبر.",
             "texto4": "[❗] طلب جديد لإضافة بوت إلى مجموعة [❗]\n\n—◉ المطالب:",
@@ -4018,7 +4018,7 @@
                 "*—◉ استمر في الاستكشاف وأداء المهام لتحقيق طموحاتك في نقابة المغامرين. استمر في التفاعل مع البوت!*"
             ]
         },
-        "rpg_minar_mysticcoins": {
+        "rpg_minar_KillzNCoins": {
             "texto1": [
                 "ما شاء الله 😎 لقد حفرت",
                 "🌟✨ رائع!! لقد حصلت على",
@@ -4357,7 +4357,7 @@
             "texto11": [
                 "[ ⚠️ ] تحذير",
                 "[ ⚠️ ] تحذير",
-                "https://github.com/Santx07/KillzN"
+                "https://github.com/KillzN/Prueba"
             ]
         },
         "participantsUpdate": {
