--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1,7 +1,7 @@
 {
     "___creditos": {
-        "___Contribuidor": "https://github.com/jeffersonalionco",
-        "___Criador": "https://github.com/BrunoSobrino"
+        "___Contribuidor": "https://www.instagram.com/ineffable.mvrco/",
+        "___Criador": "https://www.instagram.com/ineffable.mvrco/"
     },
     "plugins": {
         "antiarab": {
@@ -799,7 +799,7 @@
         },
         "downloader_ytmeta": {
             "texto1": "[❗] Enter a YouTube link.",
-            "texto2": "🤴🏻 Download by BrunoSobrino & TheMystic-Bot-MD 🤖"
+            "texto2": "🤴🏻 Download by ineffable.mvrco & 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧  🤖"
         },
         "downloader_ytv_2": {
             "texto1": "[❗𝐈𝐍𝐅𝐎❗] Enter the command followed by the YouTube video link*",
@@ -856,8 +856,8 @@
         "fix_owner_esperando_mensajes": {
             "texto1": "[❗] Use this command directly in the main Bot number.",
             "texto2": "[❗] Starting the process of deleting all session files, except for creds.json...",
-            "texto3": "[❗] The MysticSession folder does not exist or is empty.",
-            "texto4": "[❗] No files to delete were found in the MysticSession folder.",
+            "texto3": "[❗] The KillzNSession folder does not exist or is empty.",
+            "texto4": "[❗] No files to delete were found in the KillzNSession folder.",
             "texto5": [
                 "[❗]",
                 "session files were deleted, except for creds.json."
@@ -2411,15 +2411,15 @@
             "texto1": [
                 "*[❗] You are in a conversation or order to use the chatbot function*\n\n*—◉ Examples of Petitions and Orders*\n*◉ Reflection on the Netflix series Merlin 2022*\n*◉ JS code for a card game*"
             ],
-            "texto2": "You will act as a WhatsApp Bot created by BrunoSobrino, you will be The Mystic - Bot.",
-            "texto3": "You will act as a WhatsApp Bot created by BrunoSobrino, you will be The Mystic - Bot.",
+            "texto2": "You will act as a WhatsApp Bot created by ineffable.mvrco, you will be The Mystic - Bot.",
+            "texto3": "You will act as a WhatsApp Bot created by ineffable.mvrco, you will be The Mystic - Bot.",
             "texto4": "*[❗] Error, please try again*"
         },
         "herramientas_chatgptvoz": {
             "texto1": [
                 "*[❗] You are in a conversation or order to use the chatbot function*\n\n*—◉ Examples of Petitions and Orders*\n*◉ Reflection on the Netflix series Merlin 2022*\n*◉ JS code for a card game*"
             ],
-            "texto2": "You will act as a WhatsApp Bot created by BrunoSobrino, you will be The Mystic - Bot.",
+            "texto2": "You will act as a WhatsApp Bot created by ineffable.mvrco, you will be The Mystic - Bot.",
             "texto3": "*[❗] Error, please try again*"
         },
         "herramientas_clima": {
@@ -2620,12 +2620,12 @@
         },
         "info_creador": {
             "texto1": [
-                "—◉ My creator's number is wa.me/5219992095479",
+                "—◉ My creator's number is wa.me/56983073328",
                 "—◉ Collaborator 1's number is wa.me/34642467703",
                 "—◉ Collaborator 2's number is wa.me/50499698072",
                 "—◉ Collaborator 3's number is wa.me/595986460945",
                 "—◉ Collaborator 4's number is wa.me/51940617554",
-                "—◉ Collaborator 5's number is wa.me/51995386439",
+                "—◉ Collaborator 5's number is wa.me/56983073328",
                 "—◉ Collaborator 6's number is wa.me/593991398786",
                 "—◉ Collaborator 7's number is wa.me/51996089079",
                 "—◉ Collaborator 8's number is wa.me/573225236629",
@@ -2654,7 +2654,7 @@
                 "➤ PAYPAL: https://www.paypal.me/BrunoSob",
                 "👉🏻 CONTACT IF NECESSARY",
                 "MORE DATA AND TO THANK",
-                "wa.me/5219992095479"
+                "wa.me/56983073328"
             ]
         },
         "info_estado": {
@@ -2719,7 +2719,7 @@
             "texto2": "The Best Hosting 🚀"
         },
         "info_instalarbot": {
-            "texto1": "*—◉ MAIN BOT INSTALLATION*\n> Tutorial: https://youtu.be/eC9TfKICpcY\n> Official Page: https://boxmineworld.com\n> Control Panel: https://dash.boxmineworld.com/home\n> Panel: https://panel.boxmineworld.com\n> Support: https://discord.gg/84qsr4v \n\n------------------------------------\n—◉ TERTIARY BOT INSTALLATION\n> Tutorial: https://youtu.be/yRS4m36Zwkw\n\n------------------------------------\n\n*—◉ INSTALLATION COMMANDS*\n> Commands:\n- cd && termux-setup-storage\n- apt-get update -y && apt-get upgrade -y\n- pkg install -y git nodejs ffmpeg imagemagick && pkg install yarn \n- git clone https://github.com/Santx07/KillzN.git && cd TheMystic-Bot-MD\n- yarn install\n- npm install\n- npm update\n- npm start\n\n------------------------------------\n\n—◉ ✔️ RE-ACTIVATION IN CASE OF STOP IN TERMUX ✔️\nENTER THE FOLLOWING COMMANDS ONE BY ONE:\n> cd TheMystic-Bot-MD\n> npm start\n\n------------------------------------\n\n—◉ 👽 GET ANOTHER QR CODE IN TERMUX 👽\nENTER THE FOLLOWING COMMANDS ONE BY ONE:\n> cd TheMystic-Bot-MD\n> rm -rf MysticSession\n> npm start",
+            "texto1": "*—◉ MAIN BOT INSTALLATION*\n> Tutorial: https://youtu.be/eC9TfKICpcY\n> Official Page: https://boxmineworld.com\n> Control Panel: https://dash.boxmineworld.com/home\n> Panel: https://panel.boxmineworld.com\n> Support: https://discord.gg/84qsr4v \n\n------------------------------------\n—◉ TERTIARY BOT INSTALLATION\n> Tutorial: https://youtu.be/yRS4m36Zwkw\n\n------------------------------------\n\n*—◉ INSTALLATION COMMANDS*\n> Commands:\n- cd && termux-setup-storage\n- apt-get update -y && apt-get upgrade -y\n- pkg install -y git nodejs ffmpeg imagemagick && pkg install yarn \n- git clone https://github.com/KillzN/Prueba.git && cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n- yarn install\n- npm install\n- npm update\n- npm start\n\n------------------------------------\n\n—◉ ✔️ RE-ACTIVATION IN CASE OF STOP IN TERMUX ✔️\nENTER THE FOLLOWING COMMANDS ONE BY ONE:\n> cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n> npm start\n\n------------------------------------\n\n—◉ 👽 GET ANOTHER QR CODE IN TERMUX 👽\nENTER THE FOLLOWING COMMANDS ONE BY ONE:\n> cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n> rm -rf KillzNSession\n> npm start",
             "texto2": "The Best WhatsApp Bot"
         },
         "info_listprem": {
@@ -2754,12 +2754,12 @@
             "texto1": [
                 "_*< INFORMATION - REPOSITORY />*_",
                 "▢ *Name:*",
-                "TheMystic-Bot-MD",
+                "𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 ",
                 "▢ *Visitors:*",
                 "▢ *Size:*",
                 "▢ *Last update:*",
                 "▢ *URL:*",
-                "https://github.com/Santx07/KillzN",
+                "https://github.com/KillzN/Prueba",
                 "Forks ·",
                 "Stars ·",
                 "Issues\n\n",
@@ -3190,7 +3190,7 @@
             "texto3": "Bot Group List 🤖\n\n—◉ Total groups:"
         },
         "owner_join": {
-            "texto1": "[❗] Wrong or missing link, please insert the link of a WhatsApp group.\n\n*—◉ Example:\n◉ #join https://chat.whatsapp.com/FwEUGxkvZD85fIIp0gKyFC*",
+            "texto1": "[❗] Wrong or missing link, please insert the link of a WhatsApp group.\n\n*—◉ Example:\n◉ #join https://chat.whatsapp.com/FFB0fgdK3IP4ZEmZ8jF1CC*",
             "texto2": "[ ✔️ ] Bot successfully joined the group.",
             "texto3": "[❗] Your group's link has been sent to my owner.\n\n*—◉ Your group will be under evaluation and the Bot owner will decide whether to add the Bot or not.\n\n—◉ Some reasons why your request might be denied are:\n1.- The Bot is saturated.\n2.- The Bot was recently removed from the group.\n3.- The group link has been reset.\n4.- The Bot is not added to groups by decision of the Bot owner.\n\n—◉ The evaluation process may take some time, even days, please be patient.",
             "texto4": "[❗] NEW REQUEST FOR A BOT FOR A GROUP [❗]\n\n—◉ Applicant:",
@@ -3362,7 +3362,7 @@
                 "║┈┈┈┈┈┈┈┈┈┈┈┈┈",
                 "Diamonds* 💎",
                 "Tokens* 🪙",
-                "MysticCoins* 👾",
+                "KillzNCoins* 👾",
                 "Exp* ⚡",
                 "╚═════════════════⬣"
             ]
@@ -3485,7 +3485,7 @@
                 "*—◉ Keep exploring and completing missions to reach new heights in the Guild of Adventurers. Keep interacting with the Bot!*"
             ]
         },
-        "rpg_minar_mysticcoins": {
+        "rpg_minar_KillzNCoins": {
             "texto1": [
                 "What a pro 😎 you mined",
                 "🌟✨ Cool!! You receive",
@@ -3824,7 +3824,7 @@
             "texto11": [
                 "[ ⚠️ ] Warning",
                 "[ ⚠️ ] Warning",
-                "https://github.com/Santx07/KillzN"
+                "https://github.com/KillzN/Prueba"
             ]
         },
         "participantsUpdate": {
