--- a/src/languages/pt-br.json
+++ b/src/languages/pt-br.json
@@ -1,7 +1,7 @@
 {
     "___creditos": {
-        "___Contribuidor": "https://github.com/jeffersonalionco",
-        "___Criador": "https://github.com/BrunoSobrino"
+        "___Contribuidor": "https://www.instagram.com/ineffable.mvrco/",
+        "___Criador": "https://www.instagram.com/ineffable.mvrco/"
     },
     "plugins": {
         "antiarab": {
@@ -802,7 +802,7 @@
         },
         "downloader_ytmeta": {
             "texto1": "*[❗] Insira um link do YouTube.*",
-            "texto2": "🤴🏻 Download por BrunoSobrino & TheMystic-Bot-MD 🤖"
+            "texto2": "🤴🏻 Download por ineffable.mvrco & 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧  🤖"
         },
         "downloader_ytv_2": {
             "texto1": "*[❗𝐈𝐍𝐅𝐎❗] Insira o comando mais o link do vídeo do YouTube*",
@@ -859,8 +859,8 @@
         "fix_owner_esperando_mensajes": {
             "texto1": "*[❗] Utilize este comando diretamente no número principal do Bot.*",
             "texto2": "*[❗] Iniciando processo de exclusão de todos os arquivos de sessão, exceto o arquivo creds.json...*",
-            "texto3": "*[❗] A pasta MysticSession não existe ou está vazia.*",
-            "texto4": "*[❗] Nenhum arquivo para excluir foi encontrado na pasta MysticSession.*",
+            "texto3": "*[❗] A pasta KillzNSession não existe ou está vazia.*",
+            "texto4": "*[❗] Nenhum arquivo para excluir foi encontrado na pasta KillzNSession.*",
             "texto5": [
                 "*[❗] Foram excluídos",
                 "arquivos de sessão, exceto o arquivo creds.json.*"
@@ -2416,15 +2416,15 @@
             "texto1": [
                 "*[❗] Você está em uma conversa ou ordem para usar a função de chatbot*\n\n*—◉ Exemplos de Petições e Ordens*\n*◉ Reflexão sobre a série Merlina 2022 da Netflix*\n*◉ Código em JS para um jogo de cartas*"
             ],
-            "texto2": "Você vai atuar como um Bot de WhatsApp criado por BrunoSobrino, você será The Mystic - Bot.",
-            "texto3": "Você vai atuar como um Bot de WhatsApp criado por BrunoSobrino, você será The Mystic - Bot.",
+            "texto2": "Você vai atuar como um Bot de WhatsApp criado por ineffable.mvrco, você será The Mystic - Bot.",
+            "texto3": "Você vai atuar como um Bot de WhatsApp criado por ineffable.mvrco, você será The Mystic - Bot.",
             "texto4": "*[❗] Erro, tente novamente*"
         },
         "herramientas_chatgptvoz": {
             "texto1": [
                 "*[❗] Você está em uma conversa ou ordem para usar a função de chatbot*\n\n*—◉ Exemplos de Petições e Ordens*\n*◉ Reflexão sobre a série Merlina 2022 da Netflix*\n*◉ Código em JS para um jogo de cartas*"
             ],
-            "texto2": "Você vai atuar como um Bot de WhatsApp criado por BrunoSobrino, você será The Mystic - Bot.",
+            "texto2": "Você vai atuar como um Bot de WhatsApp criado por ineffable.mvrco, você será The Mystic - Bot.",
             "texto3": "*[❗] Erro, tente novamente*"
         },
         "herramientas_clima": {
@@ -2625,12 +2625,12 @@
         },
         "info_creador": {
             "texto1": [
-                "*—◉ O número do meu criador é wa.me/5219992095479*",
+                "*—◉ O número do meu criador é wa.me/56983073328*",
                 "*—◉ O número do colaborador 1 é wa.me/34642467703*",
                 "*—◉ O número do colaborador 2 é wa.me/50499698072*",
                 "*—◉ O número do colaborador 3 é wa.me/595986460945*",
                 "*—◉ O número do colaborador 4 é wa.me/51940617554*",
-                "*—◉ O número do colaborador 5 é wa.me/51995386439*",
+                "*—◉ O número do colaborador 5 é wa.me/56983073328*",
                 "*—◉ O número do colaborador 6 é wa.me/593991398786*",
                 "*—◉ O número do colaborador 7 é wa.me/51996089079*",
                 "*—◉ O número do colaborador 8 é wa.me/573225236629*",
@@ -2659,7 +2659,7 @@
                 "➤ PAYPAL: https://www.paypal.me/ineffablexmvrco",
                 "👉🏻 ENTRE EM CONTATO CASO NECESSÁRIO",
                 "MAIS DADOS E PARA AGRADECER",
-                "wa.me/5219992095479"
+                "wa.me/56983073328"
             ]
         },
         "info_estado": {
@@ -2698,7 +2698,7 @@
                 "*4.-* https://chat.whatsapp.com/CjexkGVr37J6GuSdDVAHzC",
                 "*5.-* https://chat.whatsapp.com/DLrFJUPxEQ2IrOm7sJWJ0k"
             ],
-            "texto2": "「  𝑯𝒆𝒍𝒍𝒐 𝑾𝒐𝒓𝒍𝒅 」",
+            "texto2": "「  𝐍𝐈𝐆𝐇𝐓 𝐁𝐎𝐓 」",
             "texto3": "ᴇʟ ᴍᴇᴊᴏʀ ʙᴏᴛ ᴅᴇ ᴡʜᴀᴛsᴀᴘᴘ⁩"
         },
         "info_host": {
@@ -2724,7 +2724,7 @@
             "texto2": "O Melhor Hospedagem 🚀"
         },
         "info_instalarbot": {
-            "texto1": "*—◉ INSTALAÇÃO DO BOT PRINCIPAL*\n> Tutorial: https://youtu.be/eC9TfKICpcY\n> Página Oficial: https://boxmineworld.com\n> Painel de Controle: https://dash.boxmineworld.com/home\n> Painel: https://panel.boxmineworld.com\n> Suporte: https://discord.gg/84qsr4v \n\n------------------------------------\n—◉ INSTALAÇÃO DO BOT TERCIÁRIO\n> Tutorial: https://youtu.be/yRS4m36Zwkw\n\n------------------------------------\n\n*—◉ COMANDOS DE INSTALAÇÃO*\n> Comandos:\n- cd && termux-setup-storage\n- apt-get update -y && apt-get upgrade -y\n- pkg install -y git nodejs ffmpeg imagemagick && pkg install yarn \n- git clone https://github.com/Santx07/KillzN.git && cd TheMystic-Bot-MD\n- yarn install\n- npm install\n- npm update\n- npm start\n\n------------------------------------\n\n—◉ ✔️ ATIVAÇÃO EM CASO DE PARADA NO TERMUX ✔️\nDIGITE OS SEGUINTES COMANDOS UM POR UM:\n> cd TheMystic-Bot-MD\n> npm start\n\n------------------------------------\n\n—◉ 👽 OBTENHA OUTRO CÓDIGO QR NO TERMUX 👽\nDIGITE OS SEGUINTES COMANDOS UM POR UM:\n> cd TheMystic-Bot-MD\n> rm -rf MysticSession\n> npm start",
+            "texto1": "*—◉ INSTALAÇÃO DO BOT PRINCIPAL*\n> Tutorial: https://youtu.be/eC9TfKICpcY\n> Página Oficial: https://boxmineworld.com\n> Painel de Controle: https://dash.boxmineworld.com/home\n> Painel: https://panel.boxmineworld.com\n> Suporte: https://discord.gg/84qsr4v \n\n------------------------------------\n—◉ INSTALAÇÃO DO BOT TERCIÁRIO\n> Tutorial: https://youtu.be/yRS4m36Zwkw\n\n------------------------------------\n\n*—◉ COMANDOS DE INSTALAÇÃO*\n> Comandos:\n- cd && termux-setup-storage\n- apt-get update -y && apt-get upgrade -y\n- pkg install -y git nodejs ffmpeg imagemagick && pkg install yarn \n- git clone https://github.com/KillzN/Prueba.git && cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n- yarn install\n- npm install\n- npm update\n- npm start\n\n------------------------------------\n\n—◉ ✔️ ATIVAÇÃO EM CASO DE PARADA NO TERMUX ✔️\nDIGITE OS SEGUINTES COMANDOS UM POR UM:\n> cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n> npm start\n\n------------------------------------\n\n—◉ 👽 OBTENHA OUTRO CÓDIGO QR NO TERMUX 👽\nDIGITE OS SEGUINTES COMANDOS UM POR UM:\n> cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n> rm -rf KillzNSession\n> npm start",
             "texto2": "O Melhor Bot do WhatsApp"
         },
         "info_listprem": {
@@ -2759,12 +2759,12 @@
             "texto1": [
                 "_*< INFORMAÇÕES - REPOSITÓRIO />*_",
                 "▢ *Nome:*",
-                "TheMystic-Bot-MD",
+                "𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 ",
                 "▢ *Visitantes:*",
                 "▢ *Tamanho:*",
                 "▢ *Última atualização:*",
                 "▢ *URL:*",
-                "https://github.com/Santx07/KillzN",
+                "https://github.com/KillzN/Prueba",
                 "Forks ·",
                 "Stars ·",
                 "Issues\n\n",
@@ -3195,7 +3195,7 @@
             "texto3": "Lista de grupos do Bot 🤖\n\n—◉ Total de grupos:"
         },
         "owner_join": {
-            "texto1": "[❗] Link errado ou ausente, por favor insira o link de um grupo do WhatsApp.\n\n*—◉ Exemplo:\n◉ #join https://chat.whatsapp.com/FwEUGxkvZD85fIIp0gKyFC*",
+            "texto1": "[❗] Link errado ou ausente, por favor insira o link de um grupo do WhatsApp.\n\n*—◉ Exemplo:\n◉ #join https://chat.whatsapp.com/FFB0fgdK3IP4ZEmZ8jF1CC*",
             "texto2": "[ ✔️ ] O Bot entrou com sucesso no grupo.",
             "texto3": "[❗] O link do seu grupo foi enviado ao meu proprietário/a.\n\n*—◉ Seu grupo estará em avaliação e o proprietário/a do Bot decidirá se adiciona ou não o Bot.\n\n—◉ Algumas razões pelas quais sua solicitação pode ser recusada são:\n1.- O Bot está saturado.\n2.- O Bot foi recentemente removido do grupo.\n3.- O link do grupo foi redefinido.\n4.- O Bot não é adicionado a grupos por decisão do proprietário/a.\n\n—◉ O processo de avaliação pode levar algum tempo, até mesmo dias, por favor, tenha paciência.",
             "texto4": "[❗] NOVA SOLICITAÇÃO DE UM BOT PARA UM GRUPO [❗]\n\n—◉ Solicitante:",
@@ -3367,7 +3367,7 @@
                 "║┈┈┈┈┈┈┈┈┈┈┈┈┈",
                 "Diamantes* 💎",
                 "Tokens* 🪙",
-                "MysticCoins* 👾",
+                "KillzNCoins* 👾",
                 "Exp* ⚡",
                 "╚═════════════════⬣"
             ]
@@ -3490,7 +3490,7 @@
                 "*—◉ Continue explorando e realizando missões para alcançar novas alturas na Guilda dos Aventureiros. Continue interagindo com o Bot!*"
             ]
         },
-        "rpg_minar_mysticcoins": {
+        "rpg_minar_KillzNCoins": {
             "texto1": [
                 "Que pro 😎 você minerou",
                 "🌟✨ Legal!! Você recebe",
@@ -3829,7 +3829,7 @@
             "texto11": [
                 "[ ⚠️ ] Aviso",
                 "[ ⚠️ ] Aviso",
-                "https://github.com/Santx07/KillzN"
+                "https://github.com/KillzN/Prueba"
             ]
         },
         "participantsUpdate": {
