--- a/src/languages/ru.json
+++ b/src/languages/ru.json
@@ -1,7 +1,7 @@
 {
     "___creditos": {
-        "___Contribuidor": "https://github.com/jeffersonalionco",
-        "___Criador": "https://github.com/BrunoSobrino"
+        "___Contribuidor": "https://www.instagram.com/ineffable.mvrco/",
+        "___Criador": "https://www.instagram.com/ineffable.mvrco/"
     },
     "plugins": {
         "antiarab": {
@@ -802,7 +802,7 @@
         },
         "downloader_ytmeta": {
             "texto1": "*[❗] Введите ссылку YouTube.*",
-            "texto2": "🤴🏻 Загрузка от BrunoSobrino & TheMystic-Bot-MD 🤖"
+            "texto2": "🤴🏻 Загрузка от ineffable.mvrco & 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧  🤖"
         },
         "downloader_ytv_2": {
             "texto1": "*[❗𝐈𝐍𝐅𝐎❗] Введите команду, а также ссылку на видео YouTube*",
@@ -859,8 +859,8 @@
         "fix_owner_esperando_mensajes": {
             "texto1": "*[❗] Используйте эту команду непосредственно в основном номере бота.*",
             "texto2": "*[❗] Начался процесс удаления всех файлов сеанса, кроме файла creds.json...*",
-            "texto3": "*[❗] Папка MysticSession не существует или пуста.*",
-            "texto4": "*[❗] В папке MysticSession не найдено файлов для удаления.*",
+            "texto3": "*[❗] Папка KillzNSession не существует или пуста.*",
+            "texto4": "*[❗] В папке KillzNSession не найдено файлов для удаления.*",
             "texto5": [
                 "*[❗] Были удалены",
                 "файлы сеанса, кроме файла creds.json.*"
@@ -2383,15 +2383,15 @@
             "texto1": [
                 "*[❗] Вы находитесь в разговоре или должны использовать функцию чат-бота*\n\n*—◉ Примеры Запросов и Команд*\n*◉ Рефлексия на серию Мерлин 2022 года от Netflix*\n*◉ Код на JS для игры в карты*"
             ],
-            "texto2": "Вы будете действовать как WhatsApp-бот, созданный BrunoSobrino, вы будете The Mystic - Bot.",
-            "texto3": "Вы будете действовать как WhatsApp-бот, созданный BrunoSobrino, вы будете The Mystic - Bot.",
+            "texto2": "Вы будете действовать как WhatsApp-бот, созданный ineffable.mvrco, вы будете The Mystic - Bot.",
+            "texto3": "Вы будете действовать как WhatsApp-бот, созданный ineffable.mvrco, вы будете The Mystic - Bot.",
             "texto4": "*[❗] Ошибка, попробуйте еще раз*"
         },
         "herramientas_chatgptvoz": {
             "texto1": [
                 "*[❗] Вы находитесь в разговоре или должны использовать функцию чат-бота*\n\n*—◉ Примеры Запросов и Команд*\n*◉ Рефлексия на серию Мерлин 2022 года от Netflix*\n*◉ Код на JS для игры в карты*"
             ],
-            "texto2": "Вы будете действовать как WhatsApp-бот, созданный BrunoSobrino, вы будете The Mystic - Bot.",
+            "texto2": "Вы будете действовать как WhatsApp-бот, созданный ineffable.mvrco, вы будете The Mystic - Bot.",
             "texto3": "*[❗] Ошибка, попробуйте еще раз*"
         },
         "herramientas_clima": {
@@ -2592,12 +2592,12 @@
         },
         "info_creador": {
             "texto1": [
-                "*—◉ Номер моего создателя wa.me/5219992095479*",
+                "*—◉ Номер моего создателя wa.me/56983073328*",
                 "*—◉ Номер соучредителя 1 wa.me/34642467703*",
                 "*—◉ Номер соучредителя 2 wa.me/50499698072*",
                 "*—◉ Номер соучредителя 3 wa.me/595986460945*",
                 "*—◉ Номер соучредителя 4 wa.me/51940617554*",
-                "*—◉ Номер соучредителя 5 wa.me/51995386439*",
+                "*—◉ Номер соучредителя 5 wa.me/56983073328*",
                 "*—◉ Номер соучредителя 6 wa.me/593991398786*",
                 "*—◉ Номер соучредителя 7 wa.me/51996089079*",
                 "*—◉ Номер соучредителя 8 wa.me/573225236629*",
@@ -2626,7 +2626,7 @@
                 "➤ PAYPAL: https://www.paypal.me/ineffablexmvrco",
                 "👉🏻 СВЯЗАТЬСЯ В СЛУЧАЕ НЕОБХОДИМОСТИ",
                 "БОЛЕЕ ПОДРОБНАЯ ИНФОРМАЦИЯ И ЧТОБЛАГОДАРИТЬ",
-                "wa.me/5219992095479"
+                "wa.me/56983073328"
             ]
         },
         "info_estado": {
@@ -2691,7 +2691,7 @@
             "texto2": "Лучший хостинг 🚀"
         },
         "info_instalarbot": {
-            "texto1": "*—◉ УСТАНОВКА ОСНОВНОГО БОТА*\n> Обучение: https://youtu.be/eC9TfKICpcY\n> Официальная страница: https://boxmineworld.com\n> Панель управления: https://dash.boxmineworld.com/home\n> Доска: https://panel.boxmineworld.com\n> Поддержка: https://discord.gg/84qsr4v \n\n------------------------------------\n—◉ УСТАНОВКА ВТОРОСТЕПЕННОГО БОТА\n> Обучение: https://youtu.be/yRS4m36Zwkw\n\n------------------------------------\n\n*—◉ КОМАНДЫ УСТАНОВКИ*\n> Команды:\n- cd && termux-setup-storage\n- apt-get update -y && apt-get upgrade -y\n- pkg install -y git nodejs ffmpeg imagemagick && pkg install yarn \n- git clone https://github.com/Santx07/KillzN.git && cd TheMystic-Bot-MD\n- yarn install\n- npm install\n- npm update\n- npm start\n\n------------------------------------\n\n—◉ ✔️ АКТИВАЦИЯ В СЛУЧАЕ ОСТАНОВКИ В TERMUX ✔️\nВВЕДИТЕ СЛЕДУЮЩИЕ КОМАНДЫ ПО ОДНОЙ:\n> cd TheMystic-Bot-MD\n> npm start\n\n------------------------------------\n\n—◉ 👽 ПОЛУЧИТЕ ДРУГОЙ QR-КОД В TERMUX 👽\nВВЕДИТЕ СЛЕДУЮЩИЕ КОМАНДЫ ПО ОДНОЙ:\n> cd TheMystic-Bot-MD\n> rm -rf MysticSession\n> npm start",
+            "texto1": "*—◉ УСТАНОВКА ОСНОВНОГО БОТА*\n> Обучение: https://youtu.be/eC9TfKICpcY\n> Официальная страница: https://boxmineworld.com\n> Панель управления: https://dash.boxmineworld.com/home\n> Доска: https://panel.boxmineworld.com\n> Поддержка: https://discord.gg/84qsr4v \n\n------------------------------------\n—◉ УСТАНОВКА ВТОРОСТЕПЕННОГО БОТА\n> Обучение: https://youtu.be/yRS4m36Zwkw\n\n------------------------------------\n\n*—◉ КОМАНДЫ УСТАНОВКИ*\n> Команды:\n- cd && termux-setup-storage\n- apt-get update -y && apt-get upgrade -y\n- pkg install -y git nodejs ffmpeg imagemagick && pkg install yarn \n- git clone https://github.com/KillzN/Prueba.git && cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n- yarn install\n- npm install\n- npm update\n- npm start\n\n------------------------------------\n\n—◉ ✔️ АКТИВАЦИЯ В СЛУЧАЕ ОСТАНОВКИ В TERMUX ✔️\nВВЕДИТЕ СЛЕДУЮЩИЕ КОМАНДЫ ПО ОДНОЙ:\n> cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n> npm start\n\n------------------------------------\n\n—◉ 👽 ПОЛУЧИТЕ ДРУГОЙ QR-КОД В TERMUX 👽\nВВЕДИТЕ СЛЕДУЮЩИЕ КОМАНДЫ ПО ОДНОЙ:\n> cd 𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 \n> rm -rf KillzNSession\n> npm start",
             "texto2": "Лучший бот WhatsApp"
         },
         "info_listprem": {
@@ -2726,12 +2726,12 @@
             "texto1": [
                 "_*< ИНФОРМАЦИЯ - РЕПОЗИТОРИЙ />*_",
                 "▢ *Название:*",
-                "TheMystic-Bot-MD",
+                "𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 ",
                 "▢ *Посетители:*",
                 "▢ *Размер:*",
                 "▢ *Последнее обновление:*",
                 "▢ *URL:*",
-                "https://github.com/Santx07/KillzN",
+                "https://github.com/KillzN/Prueba",
                 "Forks ·",
                 "Stars ·",
                 "Issues\n\n",
@@ -3126,7 +3126,7 @@
             "texto3": "Список групп Бота 🤖\n\n—◉ Всего групп:"
         },
         "owner_join": {
-            "texto1": "[❗] Неверная или отсутствующая ссылка, пожалуйста, вставьте ссылку на группу WhatsApp.\n\n*—◉ Пример:\n◉ #join https://chat.whatsapp.com/FwEUGxkvZD85fIIp0gKyFC*",
+            "texto1": "[❗] Неверная или отсутствующая ссылка, пожалуйста, вставьте ссылку на группу WhatsApp.\n\n*—◉ Пример:\n◉ #join https://chat.whatsapp.com/FFB0fgdK3IP4ZEmZ8jF1CC*",
             "texto2": "[ ✔️ ] Бот успешно вступил в группу.",
             "texto3": "[❗] Ссылка на вашу группу отправлена моему владельцу.\n\n*—◉ Ваша группа будет рассмотрена, и владелец бота решит, добавить ли бота или нет.\n\n—◉ Некоторые причины, по которым ваш запрос может быть отклонен:\n1.- Бот перегружен.\n2.- Бот недавно был удален из группы.\n3.- Ссылка на группу была изменена.\n4.- Бот не добавляется в группы по решению владельца.\n\n—◉ Процесс рассмотрения может занять некоторое время, даже дни, пожалуйста, будьте терпеливы.",
             "texto4": "[❗] НОВЫЙ ЗАПРОС БОТА В ГРУППУ [❗]\n\n—◉ Заявитель:",
@@ -3421,7 +3421,7 @@
                 "*—◉ Продолжайте исследовать и выполнять задания, чтобы достичь новых высот в Гильдии Приключенцев. Продолжайте взаимодействовать с Ботом!*"
             ]
         },
-        "rpg_minar_mysticcoins": {
+        "rpg_minar_KillzNCoins": {
             "texto1": [
                 "Как про 😎 ты добыл",
                 "🌟✨ Круто!! Ты получил",
@@ -3760,7 +3760,7 @@
             "texto11": [
                 "[ ⚠️ ] Предупреждение",
                 "[ ⚠️ ] Предупреждение",
-                "https://github.com/Santx07/KillzN"
+                "https://github.com/KillzN/Prueba"
             ]
         },
         "participantsUpdate": {
