--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -2620,20 +2620,7 @@
         },
         "info_creador": {
             "texto1": [
-                "—◉ My creator's number is wa.me/56983073328",
-                "—◉ Collaborator 1's number is wa.me/34642467703",
-                "—◉ Collaborator 2's number is wa.me/50499698072",
-                "—◉ Collaborator 3's number is wa.me/595986460945",
-                "—◉ Collaborator 4's number is wa.me/51940617554",
-                "—◉ Collaborator 5's number is wa.me/56983073328",
-                "—◉ Collaborator 6's number is wa.me/593991398786",
-                "—◉ Collaborator 7's number is wa.me/51996089079",
-                "—◉ Collaborator 8's number is wa.me/573225236629",
-                "—◉ Collaborator 9's number is wa.me/593959425714",
-                "—◉ Collaborator 10's number is wa.me/50246028932",
-                "—◉ Collaborator 11's contact is https://instagram.com/gata_dios",
-                "—◉ Collaborator 12's number is wa.me/5212412377467",
-                "—◉ Collaborator 13 in Brazil's number is wa.me/5545998331383"
+                "—◉ My creator's number is wa.me/56983073328"
             ],
             "texto2": [
                 "「 Hello World 」",
