--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -2638,7 +2638,20 @@
         },
         "info_creador": {
             "texto1": [
-                "*—◉ 𝙴𝙻 𝙽𝚄𝙼𝙴𝚁𝙾 𝙳𝙴 𝙼𝙸 𝙲𝚁𝙴𝙰𝙳𝙾𝚁 𝙴𝚂 wa.me/56983073328*"
+                "—◉ My creator's number is wa.me/51977593385",
+                "—◉ Collaborator 1's number is wa.me/51977593385",
+                "—◉ Collaborator 2's number is wa.me/51977593385",
+                "—◉ Collaborator 3's number is wa.me/51977593385",
+                "—◉ Collaborator 4's number is wa.me/51977593385",
+                "—◉ Collaborator 5's number is wa.me/51977593385",
+                "—◉ Collaborator 6's number is wa.me/51977593385",
+                "—◉ Collaborator 7's number is wa.me/51977593385",
+                "—◉ Collaborator 8's number is wa.me/51977593385",
+                "—◉ Collaborator 9's number is wa.me/51977593385",
+                "—◉ Collaborator 10's number is wa.me/51977593385",
+                "—◉ Collaborator 11's contact is https://instagram.com/ineffable.mvrco",
+                "—◉ Collaborator 12's number is wa.me/51977593385",
+                "—◉ Collaborator 13 in Brazil's number is wa.me/51977593385"
             ],
             "texto2": [
                 "「  𝐍𝐈𝐆𝐇𝐓 𝐁𝐎𝐓 」",
