--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -2638,20 +2638,7 @@
         },
         "info_creador": {
             "texto1": [
-                "—◉ My creator's number is wa.me/51977593385",
-                "—◉ Collaborator 1's number is wa.me/51977593385",
-                "—◉ Collaborator 2's number is wa.me/51977593385",
-                "—◉ Collaborator 3's number is wa.me/51977593385",
-                "—◉ Collaborator 4's number is wa.me/51977593385",
-                "—◉ Collaborator 5's number is wa.me/51977593385",
-                "—◉ Collaborator 6's number is wa.me/51977593385",
-                "—◉ Collaborator 7's number is wa.me/51977593385",
-                "—◉ Collaborator 8's number is wa.me/51977593385",
-                "—◉ Collaborator 9's number is wa.me/51977593385",
-                "—◉ Collaborator 10's number is wa.me/51977593385",
-                "—◉ Collaborator 11's contact is https://instagram.com/ineffable.mvrco",
-                "—◉ Collaborator 12's number is wa.me/51977593385",
-                "—◉ Collaborator 13 in Brazil's number is wa.me/51977593385"
+                "—◉ My creator's number is wa.me/51977593385"
             ],
             "texto2": [
                 "「  𝐍𝐈𝐆𝐇𝐓 𝐁𝐎𝐓 」",
