--- a/src/languages/ar.json
+++ b/src/languages/ar.json
@@ -3218,7 +3218,7 @@
         },
         "info_groupsofc": {
             "texto1": [
-                "مجموعات THE-MYSTIC-BOT-MD الرسمية في واتساب 👋🏻، قم بالانضمام لها الآن واحصل على العديد من المزايا",
+                "مجموعات KILL - BOT الرسمية في واتساب 👋🏻، قم بالانضمام لها الآن واحصل على العديد من المزايا",
                 "➤ المجموعات الرسمية للبوت:",
                 "1.- https://chat.whatsapp.com/LjJbmdO0qSDEKgB60qivZj",
                 "2.- https://chat.whatsapp.com/DbXBmsydWBE1ZN3EoY0hRs",
@@ -3232,7 +3232,7 @@
         "info_host": {
             "texto1": [
                 "🚀 -----[ كافيريكس ]------- 🚀",
-                "مرحبا بالجميع 👋🏻 نحن متحمسون للإعلان عن تعاوننا الجديد مع كافيريكس 🤖 الآن يمكنك الحصول على بوت THE-MYSTIC-BOT-MD الخاص بك على منصتك عبر الإنترنت، مما يتيح لك أن تكون البوت الخاص بك نشطًا على مدار الساعة 24/7. 💻",
+                "مرحبا بالجميع 👋🏻 نحن متحمسون للإعلان عن تعاوننا الجديد مع كافيريكس 🤖 الآن يمكنك الحصول على بوت KILL - BOT الخاص بك على منصتك عبر الإنترنت، مما يتيح لك أن تكون البوت الخاص بك نشطًا على مدار الساعة 24/7. 💻",
                 "تمت الموافقة على تثبيت هذه الإصدارات وهي معتمدة بالفعل وفعالة بالكامل. بالإضافة إلى ذلك، الخوادم متوافقة تمامًا، مما يتيح لك اختيار نوع بدء التشغيل للبوت وفقًا لاحتياجاتك. استعد لتجربة مستخدم سلسة ومثيرة!",
                 "الصفحة الرسمية:",
                 "https://www.cafirexos.com/",
@@ -3327,7 +3327,7 @@
             "texto1": "*أنت ساخن 🥵🔥*"
         },
         "maker_logos": {
-            "texto1": "*[❗ℹ️] هل تريد صنع شعار؟*\n—◉ _#logo (التأثير) (النص)_\n*مثال:*\n—◉ _#logo 3d-deep-sea-metal Mystic_\n\n*[❗] الرجاء قائمة النص الذي سيتم تطبيق الشعار عليه:*\n—◉ _#logo (التأثير) (النص1|النص2)_\n*مثال:*\n—◉ _#logo Wolf-Logo-Galaxy Mystic|Bot_\n\n*<قائمة التأثيرات/>*\n\n° 📝 #logo ",
+            "texto1": "*[❗ℹ️] هل تريد صنع شعار؟*\n—◉ _#logo (التأثير) (النص)_\n*مثال:*\n—◉ _#logo 3d-deep-sea-metal Mvrco_\n\n*[❗] الرجاء قائمة النص الذي سيتم تطبيق الشعار عليه:*\n—◉ _#logo (التأثير) (النص1|النص2)_\n*مثال:*\n—◉ _#logo Wolf-Logo-Galaxy Mystic|Bot_\n\n*<قائمة التأثيرات/>*\n\n° 📝 #logo ",
             "texto2": [
                 "*[❗ℹ️] التأثير",
                 "غير مدرج في قائمة التأثيرات*"
