--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -1,7 +1,7 @@
 {
     "___creditos": {
-        "___Contribuidor": "https://github.com/jeffersonalionco",
-        "___Criador": " https://chat.whatsapp.com/FFB0fgdK3IP4ZEmZ8jF1CC"
+        "___Contribuidor": "https://www.instagram.com/ineffable.mvrco",
+        "___Criador": " https://www.instagram.com/ineffable.mvrco"
     },
     "plugins": {
         "_antiarab": {
