--- a/src/languages/fr.json
+++ b/src/languages/fr.json
@@ -2392,7 +2392,7 @@
         "info_host": {
             "texto1": [
                 "*🚀 -----[ Cafirexos]------- 🚀*",
-                "*Bonjour à tous 👋🏻 Nous sommes ravis d'annoncer notre nouvelle collaboration avec Cafirexos 🤖 Désormais, vous pouvez avoir votre propre bot THE-MYSTIC-BOT-MD sur votre plateforme en ligne, permettant à vos bots d'être actifs 24/7. 💻*",
+                "*Bonjour à tous 👋🏻 Nous sommes ravis d'annoncer notre nouvelle collaboration avec Cafirexos 🤖 Désormais, vous pouvez avoir votre propre bot KILL - BOT sur votre plateforme en ligne, permettant à vos bots d'être actifs 24/7. 💻*",
                 "_L'installation de ces versions a été approuvée et est déjà pleinement opérationnelle. De plus, *les serveurs sont entièrement compatibles, vous permettant de choisir le type de démarrage du bot selon vos besoins.* Préparez-vous à une expérience utilisateur fluide et passionnante !_ ",
                 "*Page officielle :*",
                 "https://www.cafirexos.com/",
@@ -2487,7 +2487,7 @@
             "texto1": "*VOUS ÊTES CHAUD 🥵🔥*"
         },
         "maker_logos": {
-            "texto1": "*[❗ℹ️] VOULEZ-VOUS CRÉER UN LOGO ?*\n—◉ _#logo (effet) (texte)_\n*EXEMPLE :*\n—◉ _#logo 3d-deep-sea-metal Mystic_\n\n*[❗] VEUILLEZ FOURNIR LE TEXTE SUR LEQUEL LE LOGO SERA APPLIQUÉ :*\n—◉ _#logo (effet) (texte1|texte2)_\n*EXEMPLE :*\n—◉ _#logo Wolf-Logo-Galaxy Mystic|Bot_\n\n*<LISTE DES EFFETS/>*\n\n° 📝 #logo ",
+            "texto1": "*[❗ℹ️] VOULEZ-VOUS CRÉER UN LOGO ?*\n—◉ _#logo (effet) (texte)_\n*EXEMPLE :*\n—◉ _#logo 3d-deep-sea-metal Mvrco_\n\n*[❗] VEUILLEZ FOURNIR LE TEXTE SUR LEQUEL LE LOGO SERA APPLIQUÉ :*\n—◉ _#logo (effet) (texte1|texte2)_\n*EXEMPLE :*\n—◉ _#logo Wolf-Logo-Galaxy Mystic|Bot_\n\n*<LISTE DES EFFETS/>*\n\n° 📝 #logo ",
             "texto2": [
                 "*[❗ℹ️] L'EFFET",
                 "N'EST PAS DANS LA LISTE DES EFFETS*"
