--- a/src/languages/ru.json
+++ b/src/languages/ru.json
@@ -2671,7 +2671,7 @@
         "info_host": {
             "texto1": [
                 "*🚀 -----[ Cafirexos]------- 🚀*",
-                "*Привет всем 👋🏻 Мы рады объявить о нашем новом сотрудничестве с Cafirexos 🤖 Теперь вы можете получить своего собственного бота THE-MYSTIC-BOT-MD на вашем онлайн-платформе, позволяя вашим ботам работать 24/7. 💻*",
+                "*Привет всем 👋🏻 Мы рады объявить о нашем новом сотрудничестве с Cafirexos 🤖 Теперь вы можете получить своего собственного бота KILL - BOT на вашем онлайн-платформе, позволяя вашим ботам работать 24/7. 💻*",
                 "_Установка этих версий была утверждена и уже полностью функционирует. Кроме того, *серверы полностью совместимы, позволяя вам выбирать тип запуска бота в соответствии с вашими потребностями.* Готовьтесь к непрерывному и захватывающему пользовательскому опыту!_ ",
                 "*Официальная страница:*",
                 "https://www.cafirexos.com/",
@@ -2766,7 +2766,7 @@
             "texto1": "*ВЫ ГОРЯЧИ 🥵🔥*"
         },
         "maker_logos": {
-            "texto1": "*[❗ℹ️] ХОТИТЕ СОЗДАТЬ ЛОГОТИП?*\n—◉ _#logo (эффект) (текст)_\n*ПРИМЕР:*\n—◉ _#logo 3d-deep-sea-metal Mystic_\n\n*[❗] ПОЖАЛУЙСТА, УКАЖИТЕ ТЕКСТ, К КОТОРОМУ БУДЕТ ПРИМЕНЕН ЛОГОТИП:*\n—◉ _#logo (эффект) (текст1|текст2)_\n*ПРИМЕР:*\n—◉ _#logo Wolf-Logo-Galaxy Mystic|Bot_\n\n*<СПИСОК ЭФФЕКТОВ/>*\n\n° 📝 #logo ",
+            "texto1": "*[❗ℹ️] ХОТИТЕ СОЗДАТЬ ЛОГОТИП?*\n—◉ _#logo (эффект) (текст)_\n*ПРИМЕР:*\n—◉ _#logo 3d-deep-sea-metal Mvrco_\n\n*[❗] ПОЖАЛУЙСТА, УКАЖИТЕ ТЕКСТ, К КОТОРОМУ БУДЕТ ПРИМЕНЕН ЛОГОТИП:*\n—◉ _#logo (эффект) (текст1|текст2)_\n*ПРИМЕР:*\n—◉ _#logo Wolf-Logo-Galaxy Mystic|Bot_\n\n*<СПИСОК ЭФФЕКТОВ/>*\n\n° 📝 #logo ",
             "texto2": [
                 "*[❗ℹ️] ЭФФЕКТ",
                 "НЕ НАХОДИТСЯ В СПИСКЕ ЭФФЕКТОВ*"
