--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -2662,7 +2662,7 @@
         "info_estado": {
             "texto1": [
                 "*< INFO - ESTADO />*_",
-                "[🤴🏻] *Prop.:* KillzN",
+                "[🤴🏻] *Prop.:* 𝐊𝐈𝐋𝐋𝐙𝐍",
                 "[#️⃣] *wa:* http://wa.me/56983073328",
                 "[🤖] *Grupo:* https://chat.whatsapp.com/FFB0fgdK3IP4ZEmZ8jF1CC",
                 "[💡] *Ping:*",
@@ -3368,7 +3368,7 @@
                 "║┈┈┈┈┈┈┈┈┈┈┈┈┈",
                 "Diamantes* 💎",
                 "Tokens* 🪙",
-                "KillzNCoins* 👾",
+                "𝐊𝐈𝐋𝐋𝐙𝐍Coins* 👾",
                 "Exp* ⚡",
                 "╚═════════════════⬣"
             ]
